syntax = "proto3";

package connection;

option go_package = "grpc/connection";

import "click.proto";

service ConnectionService {
    rpc SetConnection (Connection) returns (SetConnectionResponse);

    rpc SendClick (ClickData) returns (ClickResponse);
}

message Connection {
    int64 Id = 1;
    string host = 2;
    string port = 3;
}

message SetConnectionResponse {
    Connection addedConnection = 1;
    Error error = 2;
}

message ClickResponse {
    Click click = 1;
    Connection connection = 2;
    Error error = 3;
}

message ClickData {
    int64 Id = 1;
    Click click = 2;
    Connection connection = 3;
}

message Error {
    string code = 1;
    string message = 2;
}